# facetools

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
apps/facegrep/: CMakeLists.txt
apps/facegrep/include/: file_finder.h  file_utils.h
apps/facegrep/include/facegrep/: command_line_parser.h  facegrep.h
apps/facegrep/src/: command_line_parser.cpp  facegrep.cpp  file_finder.cpp  main.cpp
docs/facegrep/: Doxyfile
docs/facegrep/html/: annotated.html  classes.html  classfacetools_1_1command__line__parser-members.html  classfacetools_1_1command__line__parser.html  classfacetools_1_1facegrep-members.html  classfacetools_1_1facegrep.html  classfile__finder-members.html  classfile__finder.html  command__line__parser_8cpp_source.html  command__line__parser_8h_source.html  dir_1feaec381dccb4cc99d62cb29d874096.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_5e270af0ed3105db55e1a58d9606b9ab.html  dir_8ba93a35ae6a8e10e61b206985337e0f.html  dir_9bdccb52fe1aa0a3a2f5c551a0a3c6b0.html  dir_a072ffde9d9518ab4c4883fecefb59b0.html  dir_f18b70577add03231aba6a62c1232824.html  dir_f3e2755f0058ab1a853d43c828bc0f4b.html  dir_fef89beabe73e1661adc94fbeea903a1.html  facegrep_8cpp_source.html  facegrep_8h_source.html  file__finder_8cpp_source.html  file__finder_8h_source.html  file__utils_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  main_8cpp_source.html  structfacetools_1_1facegrep__commandline__parameters__t-members.html  structfacetools_1_1facegrep__commandline__parameters__t.html  structfacetools_1_1facegrep__parameters__t-members.html  structfacetools_1_1facegrep__parameters__t.html
docs/facegrep/html/search/: all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_5.js  variables_6.js
docs/facegrep/latex/: annotated.tex  classfacetools_1_1command__line__parser.tex  classfacetools_1_1facegrep.tex  classfile__finder.tex  dir_1feaec381dccb4cc99d62cb29d874096.tex  dir_5e270af0ed3105db55e1a58d9606b9ab.tex  dir_9bdccb52fe1aa0a3a2f5c551a0a3c6b0.tex  dir_a072ffde9d9518ab4c4883fecefb59b0.tex  dir_f3e2755f0058ab1a853d43c828bc0f4b.tex  dir_fef89beabe73e1661adc94fbeea903a1.tex  refman.tex  structfacetools_1_1facegrep__commandline__parameters__t.tex  structfacetools_1_1facegrep__parameters__t.tex
docs/facetools/: Doxyfile
docs/facetools/html/: all__0_8js_source.html  all__1_8js_source.html  all__2_8js_source.html  all__3_8js_source.html  all__4_8js_source.html  all__5_8js_source.html  all__6_8js_source.html  all__7_8js_source.html  all__8_8js_source.html  all__9_8js_source.html  all__a_8js_source.html  all__b_8js_source.html  all__c_8js_source.html  annotated.html  classes.html  classes__0_8js_source.html  classfacetools_1_1face__detector-members.html  classfacetools_1_1face__detector.html  classfacetools_1_1face__recogniser-members.html  classfacetools_1_1face__recogniser.html  dir_1feaec381dccb4cc99d62cb29d874096.html  dir_2f24e7b902385f767a74088df247038a.html  dir_30437621796190aaaefb28591513998c.html  dir_41c0fb85957de838978f8c2b9e781c24.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_6ab0a60e12caf2288cd0b42c8419af6b.html  dir_8ba93a35ae6a8e10e61b206985337e0f.html  dir_e2e11eb7e9238726921f78b13622eb51.html  dir_e9f3d369e30b92042de0402b627dd7a3.html  dir_f18b70577add03231aba6a62c1232824.html  dynsections_8js_source.html  enums__0_8js_source.html  enumvalues__0_8js_source.html  enumvalues__1_8js_source.html  error_8cpp_source.html  error_8h_source.html  face_8h_source.html  face__detector_8cpp_source.html  face__detector_8h_source.html  face__recogniser_8cpp_source.html  (+43 more)
docs/facetools/html/search/: all_1.js  all_2.js  all_4.js  all_8.js  all_a.js  all_b.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js  variables_8.js
docs/facetools/latex/: annotated.tex  classfacetools_1_1face__detector.tex  classfacetools_1_1face__recogniser.tex  dir_2f24e7b902385f767a74088df247038a.tex  dir_30437621796190aaaefb28591513998c.tex  dir_41c0fb85957de838978f8c2b9e781c24.tex  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.tex  dir_6ab0a60e12caf2288cd0b42c8419af6b.tex  dir_8ba93a35ae6a8e10e61b206985337e0f.tex  dir_e2e11eb7e9238726921f78b13622eb51.tex  dir_e9f3d369e30b92042de0402b627dd7a3.tex  dir_f18b70577add03231aba6a62c1232824.tex  refman.tex  structfacetools_1_1face.tex  structfacetools_1_1face__detector__parameters__t.tex  structfacetools_1_1face__recogniser__parameters__t.tex
gtest/: README
models/: README  fetch_models.sh
tests/facegrep/: CMakeLists.txt
tests/facegrep/src/: command_line_parser_test.cpp  facegrep_test.cpp  file_finder_test.cpp
tests/facetools/: CMakeLists.txt
tests/facetools/src/: detector_test.cpp  recogniser_test.cpp
